# mimgui_blur

./: .gitignore  CMakeLists.txt  cimguidx9.lib  imgui_blur.hpp  init.lua  library.cpp
shaders/: blur_x.fxc  blur_x.hlsl  blur_y.fxc  blur_y.hlsl
